Theme color fixes (master) (#6088)
* Fix error text color for dark mode.

Don't alter --color-danger since that color works fine as a backdrop for the Toast Message.

* Remove duplicates

* Fix typo

* Fix primary/secondary button and notice_message

* Fix dimmed checkbox

* #6006 Switch from 'coolGray' to 'gray'

* Fix invisible nag (missing --color-orange)

--- a/ui/scss/init/_base-theme.scss
+++ b/ui/scss/init/_base-theme.scss
@@ -1,5 +1,5 @@
 //
-// Colors are taken from this color pallette
+// Colors are taken from this color palette
 // https://tailwindcss.com/docs/customizing-colors
 // New colors should be also taken from the same color palette (if possible)
 //
@@ -25,17 +25,17 @@
   --color-gray-2: #e5e7eb;
   --color-gray-3: #d1d5db;
   --color-gray-4: #9ca3af;
-  --color-gray-5: #6b7280;
-  --color-gray-6: #4b5563;
-  --color-gray-7: #374151;
-  --color-gray-8: #1f2937;
-  --color-gray-9: #1f2c47;
-  --color-gray-10: #111827;
+  --color-gray-5: #71717a;
+  --color-gray-6: #52525b;
+  --color-gray-7: #3f3f46;
+  --color-gray-8: #27272a;
+  --color-gray-9: #1f1f22;
+  --color-gray-10: #18181b;
   --color-amber: #f26522;
+  --color-orange: #fb923c;
 
   // Structure
   --color-text: var(--color-black);
-  --color-text-subtitle: var(--color-gray-5);
   --color-text-inverse: #fdfdfd;
   --color-background: #fafafa;
   --color-background--splash: #212529;
